--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -2,16 +2,46 @@
 	h3{
 		font-size: 16px;
 		line-height: 1.3;
+		margin-top: 14px;
 		@include ellipsis(multi, 2);
 	}
 	li{
-		padding: 14px 0;
 		border-bottom: 1px solid #EDEDED;
 		.data{
 			display: block;
 			color: #6C7B8A;
 			line-height: 1;
-			margin-top: 14px;
+			margin: 14px 0;
 		}
+		.thum{
+			display: block;
+			width: 100%;
+		}
+	}
+}
+.top{
+	padding: 20px 0 14px;
+	border-bottom: 1px solid #EDEDED;
+	h2{
+		font-size: 20px;
+	}
+	.data{
+		display: block;
+		color: #6C7B8A;
+		font-size: 16px;
+		line-height: 1;
+		margin-top: 14px;
+	}
+}
+.cont{
+	padding: 14px 0 0;
+	a{
+		text-decoration: underline;
+		color:#12a2ff;
+	}
+	img{
+		display: block;
+		width: 100%;
+		margin: 14px 0;
 	}
 }
