--- a/src/html/include/head.html
+++ b/src/html/include/head.html
@@ -6,6 +6,7 @@
 	<!-- <link rel="shortcut icon" href="ico_url" type="image/x-icon"> -->
 	<title>@@title</title> <!-- [페이지명 | 사이트명] -->
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/>
-	<script src="/js/ui.js"></script>
+	<!-- thecheck_webview -->
+	<!-- <link rel="stylesheet" type="text/css" href="/thecheck_webview/css/style.css"/> -->
 	@@content 
 </head> 
