--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -1,9 +1,12 @@
 header{
 	width: 100%;
 	height: 60px;
-	position: relative;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 	z-index: 1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: $white; 
 	h1{
 		font-size: 20px;
 		line-height: 60px;
@@ -21,7 +24,6 @@ header{
 	}
 }
 .container{
-	padding: 0 7.24%;
+	padding: 60px 7.24% 30px;
 	position: relative;
-	z-index: 2;
 }
