--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -5,6 +5,7 @@ html,body {
   font-size:16px;
   line-height: 1.5;
   color:$black;
+	position: relative;
 }
 html,body,div,ul,li,dl,dt,dd,ol,p,h1,h2,h3,h4,h5,h6,form,fieldset {
   margin:0;
