--- a/src/html/include/head.html
+++ b/src/html/include/head.html
@@ -7,6 +7,6 @@
 	<title>@@title</title> <!-- [페이지명 | 사이트명] -->
 	<link rel="stylesheet" type="text/css" href="/css/style.css"/> 
 	<!-- thecheck_webview -->
-	<!-- <link rel="stylesheet" type="text/css" href="/thecheck_webview/css/style.css"/> -->
+	<!-- <link rel="stylesheet" type="text/css" href="/thecheck_webview/css/style.css?v=210819"/> -->
 	@@content 
 </head> 
