--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,6 +1,6 @@
 .list{
 	h3{
-		font-size: 16px;
+		font-size: calcRem(16px);
 		line-height: 1.3;
 		margin-top: 14px;
 		@include ellipsis(multi, 2);
@@ -36,12 +36,12 @@
 		padding: 20px 0 14px;
 		border-bottom: 1px solid #EDEDED;
 		h2{
-			font-size: 20px;
+			font-size: calcRem(20px);
 		}
 		.data{
 			display: block;
 			color: #6C7B8A;
-			font-size: 16px;
+			font-size: calcRem(16px);
 			line-height: 1;
 			margin-top: 14px;
 		}
