--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -2,7 +2,7 @@
 html,body {
   border:none;
   font-family:$family;
-  font-size:16px;
+  font-size:$font;
   line-height: 1.5;
   color:$black;
 	position: relative;
