--- a/src/scss/_variable.scss
+++ b/src/scss/_variable.scss
@@ -2,7 +2,7 @@
 $family: "Apple SD Gothic Neo", "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", "Malgun Gothic","맑은 고딕","돋움",Dotum,"굴림",Gulim,Helvetica,sans-serif;
 $bold: normal;
 $weight :100; 
-
+$font:16px;
 $width: 100%;
 
 
