--- a/01_noti/src/scss/_layout.scss
+++ b/01_noti/src/scss/_layout.scss
@@ -39,3 +39,10 @@ header{
 	padding: 60px 7.24% 30px;
 	position: relative;
 }
+.noti{
+	width: 100%;
+	height: auto;
+	body{
+		height: auto;
+	}
+}
