--- a/01_noti/src/scss/_common.scss
+++ b/01_noti/src/scss/_common.scss
@@ -24,6 +24,7 @@
 	top:0;
 	right: 0;
 	width: 0;
+	width: 100%;
 	height: 100%;
 	z-index: 5;
 	overflow: hidden;
@@ -32,7 +33,19 @@
 	padding-top: 60px;
 	transition: all 0.4s;
 	opacity: 0.4;
+	box-sizing: border-box;
+	.bx{
+		padding: 0 7.24% 30px;
+		width: 100%;
+		height: calc(100% - 60px);
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+		overflow: hidden;
+		overflow-y: auto;
+	}
 	.top{
+		width: 100%;
+		box-sizing: border-box;
 		padding: 20px 0 14px;
 		border-bottom: 1px solid #EDEDED;
 		h2{
@@ -46,15 +59,10 @@
 			margin-top: 14px;
 		}
 	}
-	.bx{
-		padding: 0 7.24% 30px;
-		width: 100%;
-		height: calc(100% - 60px);
-		box-sizing: border-box;
-		overflow: hidden;
-		overflow-y: auto;
-	}
 	.cont{
+		width: 100%;
+		box-sizing: border-box;
+		 -moz-box-sizing: border-box;
 		padding: 14px 0 0;
 		a{
 			text-decoration: underline;
@@ -75,3 +83,12 @@
 body.no_scroll{
     overflow: hidden;
 } 
+.loading{
+	content:"";
+	@include setContent(100%, 100%, block, relative);
+	min-height: 100%;
+	margin: 0 auto;
+	background: red;
+	@include bg("global_loading_square.gif", no-repeat, 50% 50%, 160px);
+	@include blind;
+}
