--- a/03_question/src/scss/_reset.scss
+++ b/03_question/src/scss/_reset.scss
@@ -2,24 +2,23 @@
 html,body {
   border:none;
   font-family:$family;
-  font-size:$font;
-  line-height: 1.5;
+  font-size:$font; 
+  line-height: 1.6;
   color:$black;
-	position: relative;
-  width: 100%;
-  height: 100%;
 }
 html,body,div,ul,li,dl,dt,dd,ol,p,h1,h2,h3,h4,h5,h6,form,fieldset {
   margin:0;
   padding:0;
 }
 html {
+  min-width: 1024px;
   width: 100%;
-  min-width: 280px;
+  height: 100%;
   -webkit-text-size-adjust:none;
 }
 h1,h2,h3,h4,h5,h6{
   font-weight: $bold;
+  line-height: 1;
 }
 b,strong,th{font-weight: $bold;}
 article, aside, details, figcaption, figure, footer, header, menu, nav, section, main {display: block;}
@@ -51,6 +50,7 @@ button {
 }
 input[type=text], input[type=password], input[type=tel], input[type=email], input[type=button], input[type=submit], input[type=reset], button, select {
   font-family:$family;
+  outline: none;
 }
 label{
   cursor: pointer;
