--- a/01_noti/src/scss/_common.scss
+++ b/01_noti/src/scss/_common.scss
@@ -24,21 +24,20 @@
 	top:0;
 	right: 0;
 	width: 0;
-	width: 100%;
+	width: 0;
 	height: 100%;
 	z-index: 5;
 	overflow: hidden;
 	visibility: hidden;
 	background: $white;
 	padding-top: 60px;
-	transition: all 0.4s;
-	opacity: 0.4;
+	transition: all 0.1s;
+	opacity: 0;
 	box-sizing: border-box;
 	.bx{
 		padding: 0 7.24% 30px;
 		width: 100%;
-		height: calc(100% - 60px);
-		-moz-box-sizing: border-box;
+		height: 100%;
 		box-sizing: border-box;
 		overflow: hidden;
 		overflow-y: auto;
@@ -62,7 +61,6 @@
 	.cont{
 		width: 100%;
 		box-sizing: border-box;
-		 -moz-box-sizing: border-box;
 		padding: 14px 0 0;
 		a{
 			text-decoration: underline;
