--- a/01_noti/src/scss/_common.scss
+++ b/01_noti/src/scss/_common.scss
@@ -35,7 +35,7 @@
 	opacity: 0;
 	box-sizing: border-box;
 	.bx{
-		padding: 0 7.24% 30px;
+		padding: 0 0 30px;
 		width: 100%;
 		height: 100%;
 		box-sizing: border-box;
@@ -45,7 +45,7 @@
 	.top{
 		width: 100%;
 		box-sizing: border-box;
-		padding: 20px 0 14px;
+		padding: 20px 7.24% 14px;
 		border-bottom: 1px solid #EDEDED;
 		h2{
 			font-size: calcRem(20px);
@@ -62,6 +62,9 @@
 		width: 100%;
 		box-sizing: border-box;
 		padding: 14px 0 0;
+		p, li{
+			padding: 0 7.24%;
+		}
 		a{
 			text-decoration: underline;
 			color:#12a2ff;
