--- a/01_noti/src/scss/_reset.scss
+++ b/01_noti/src/scss/_reset.scss
@@ -1,76 +1,80 @@
 //common control
 html,body {
-  border:none;
-  font-family:$family;
-  font-size:$font;
-  line-height: 1.5;
-  color:$black;
+	border:none;
+	font-family:$family;
+	font-size:$font;
+	line-height: 1.5;
+	color:$black;
 	position: relative;
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 html,body,div,ul,li,dl,dt,dd,ol,p,h1,h2,h3,h4,h5,h6,form,fieldset {
-  margin:0;
-  padding:0;
+	margin:0;
+	padding:0;
 }
 html {
-  width: 100%;
-  min-width: 280px;
-  -webkit-text-size-adjust:none;
+	width: 100%;
+	min-width: 280px;
+	-webkit-text-size-adjust:none;
 }
 h1,h2,h3,h4,h5,h6{
-  font-weight: $bold;
+	font-weight: $bold;
 }
 b,strong,th{font-weight: $bold;}
 article, aside, details, figcaption, figure, footer, header, menu, nav, section, main {display: block;}
 ul,ol,dl {
-  list-style:none;
+	list-style:none;
 }
 em,address{font-style:normal}
 img {
-  border:none;
+	border:none;
 }
 fieldset {
-  border:none;
+	border:none;
 }
 table {
-  table-layout: fixed;
-  width:100%;
-  border-collapse:collapse;
+	table-layout: fixed;
+	width:100%;
+	border-collapse:collapse;
 }
 caption{
   display: none;
 }
 button {
-  border:none;
-  background:none;
-  cursor:pointer;
-  outline:none;
-  box-sizing: border-box;
-  padding: 0;
+	border:none;
+	background:none;
+	cursor:pointer;
+	outline:none;
+	box-sizing: border-box;
+	padding: 0;
 }
 input[type=text], input[type=password], input[type=tel], input[type=email], input[type=button], input[type=submit], input[type=reset], button, select {
-  font-family:$family;
+	font-family:$family;
 }
 label{
-  cursor: pointer;
+	cursor: pointer;
 }
 a {
-  color:$black;
-  &:active, &:link, &:visited, &:hover{
-    text-decoration: none;
-  }
+	color:$black;
+	&:active, &:link, &:visited, &:hover{
+		text-decoration: none;
+	}
+}
+figure{
+	margin: 0;
+	padding: 0;
 }
 .blind {
-  display: block;
-  overflow: hidden;
-  position: absolute;
-  top: -2000em;
-  left: -2000em;
-  width: 1px;
-  height: 1px;
-  margin: 0px !important;
-  text-indent: 2000em;
+	display: block;
+	overflow: hidden;
+	position: absolute;
+	top: -2000em;
+	left: -2000em;
+	width: 1px;
+	height: 1px;
+	margin: 0px !important;
+	text-indent: 2000em;
 }
 ::-webkit-scrollbar { width: 7px; height: 7px;} /* 스크롤 바 */
 ::-webkit-scrollbar-track { background-color:#fff; } /* 스크롤 바 밑의 배경 */
@@ -80,5 +84,5 @@ a {
 ::-webkit-scrollbar-button { display: none; } /* 스크롤 바 상 하단 버튼 */
 div::-webkit-scrollbar-track, div::-webkit-scrollbar-button-track  { background: rgba(255,255,255, 0);} /* 스크롤 바 밑의 배경 */
 div::-webkit-scrollbar-corner {
-  background: rgba(255,255,255, 0);
+	background: rgba(255,255,255, 0);
 }
