--- a/03_question/src/scss/_mixin.scss
+++ b/03_question/src/scss/_mixin.scss
@@ -1,56 +1,62 @@
 @function calcRem($size) { /*Mobile용 믹스인*/
-  $remSize: $size / $font;
-  @return  #{$remSize}rem;
+	$remSize: $size / $font;
+	@return  #{$remSize}rem;
 }
 
 @function calcPercent($size, $defsize) { /*Mobile용 믹스인*/
-  $remSize: $size / $defsize;
-  @return percentage($remSize);
+	$remSize: $size / $defsize;
+	@return percentage($remSize);
 }
 
 @mixin bg($fileNm:null, $repeat:no-repeat, $bgPos:0 0, $bgSize:null, $bgColor:null){
-  background:$bgColor url($url + $fileNm + $version) $repeat $bgPos;
-  @if $bgSize != null {
-    background-size:$bgSize;
-  }
+	background:$bgColor url($url + $fileNm + $version) $repeat $bgPos;
+	@if $bgSize != null { 
+		background-size:$bgSize;
+	}
 }
 @mixin bgSvg($fc:null, $repeat:no-repeat, $bgPos:0 0, $bgSize:null, $bgColor:null){
-  background:$bgColor $fc $repeat $bgPos;
-  @if $bgSize != null {
-    background-size:$bgSize;
-  }
+	background:$bgColor $fc $repeat $bgPos;
+	@if $bgSize != null {
+		background-size:$bgSize;
+	}
 }
 @mixin ellipsis($type:null,$num:2) {
-  overflow:hidden;
-  text-overflow:ellipsis;
-  @if $type == multi {
-    white-space: normal;
-    word-wrap: break-word;
-    display:-webkit-box;
-    -webkit-line-clamp:$num;
-    -webkit-box-orient:vertical;
-  }@else{
-    white-space:nowrap;
-  }
+	overflow:hidden;
+	text-overflow:ellipsis;
+	@if $type == multi {
+		white-space: normal;
+		word-wrap: break-word;
+		display:-webkit-box;
+		-webkit-line-clamp:$num;
+		-webkit-box-orient:vertical;
+	}@else{
+		white-space:nowrap;
+	}
 }
 
 @mixin clear($display:block){
-  display: $display;
-  clear: both;
-  content: "";
+	display: $display;
+	clear: both;
+	content: "";
+}
+
+@mixin media(){
+	@media (max-width: $max) {
+		@content;
+	}
 }
 
 @mixin setContent($width:auto, $height:auto, $display:null, $position:null,  $color:null) {
-  width:$width;
-  height:$height;
-  display:$display;
-  position:$position;
-  background:$color;
+	width:$width;
+	height:$height;
+	display:$display;
+	position:$position;
+	background:$color;
 }
 
 @mixin blind {
-  overflow: hidden;
-  font-size: 0;
-  line-height: 0;
-  text-indent: -2000em;
+	overflow: hidden;
+	font-size: 0;
+	line-height: 0;
+	text-indent: -2000em;
 }
