--- a/03_question/src/scss/_variable.scss
+++ b/03_question/src/scss/_variable.scss
@@ -1,5 +1,6 @@
 /*Hashing*/
 $version: "?v=1";
+$url: "/img/";
 
 /*Font 및 Color*/
 $family: "Apple SD Gothic Neo", "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", "Malgun Gothic","맑은 고딕","돋움",Dotum,"굴림",Gulim,Helvetica,sans-serif;
@@ -8,6 +9,7 @@ $weight :100;
 $font:16px; 
 
 $width: 100%;
+$max: 768px;
 
 $white: #ffffff;
 $black : #000000;
