--- a/03_question/src/scss/style.scss
+++ b/03_question/src/scss/style.scss
@@ -1,3 +1,3 @@
 @charset "UTF-8";
-// @import "variable", "mixin", "svg", "reset", "layout", "common";
-@import "variable", "mixin";
+@import "variable", "mixin", "svg", "reset", "layout", "common";
+// @import "variable", "mixin", "common";
