--- a/01_noti/src/scss/_reset.scss
+++ b/01_noti/src/scss/_reset.scss
@@ -21,7 +21,7 @@ html {
 h1,h2,h3,h4,h5,h6{
 	font-weight: $bold;
 }
-b,strong,th{font-weight: $bold;}
+b,strong,th{font-weight: bold;}
 article, aside, details, figcaption, figure, footer, header, menu, nav, section, main {display: block;}
 ul,ol,dl {
 	list-style:none;
