--- a/02_onfoomall/src/scss/_variable.scss
+++ b/02_onfoomall/src/scss/_variable.scss
@@ -1,4 +1,6 @@
 /*Font 및 Color*/
+$url :"//cdn.thecheck.co.kr/webview/onfoomall/img/";
+$version:"?v=210902";
 $family: "Apple SD Gothic Neo", "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji", "Malgun Gothic","맑은 고딕","돋움",Dotum,"굴림",Gulim,Helvetica,sans-serif;
 $bold: normal;
 $weight :100; 
